Fri Aug 17 14:41:15 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * contrib/minizip/zip.c:
          Untabify.

        * bin/fuzz.pl:
          Remove contrib directory from the list of excluded
          directories for the tabs check.

Fri Aug 17 13:36:11 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * protocols/ace/HTBP/HTBP_Channel.cpp:
        * protocols/ace/HTBP/HTBP_Session.cpp:

          debug output cleanup and ACE_ASSERT removal.

        * protocols/tests/HTBP/Send_Large_Msg/run_test.pl:

          removed used code.

        * protocols/tests/HTBP/Send_Recv_Tests/client.cpp:
        * protocols/tests/HTBP/Send_Recv_Tests/run_test.pl:
        * protocols/tests/HTBP/Send_Recv_Tests/server.cpp:

          This test wasn't working right due to the lack of a reactor. The
          debug output was also cleaned up a bit, ACE_ASSERT removed and
          the run_test script tidied up as well.

        * bin/ace_tests.lst:
        * bin/tao_other_tests.lst:
          Added HTBP and HTIOP tests to suites.

Fri Aug 17 13:13:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Message_Queue_T.h:
          Doxygen updates

Fri Aug 17 11:44:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op_Sparc.c:
        * ace/Atomic_Op.{h,cpp}:
          Added optimized functions for SunCC on x86. Thanks to
          Dennis Chernoivanov <cdi at tbricks dot com> for reporting this.
          If you want to enable these, add atomic_ops_sparc=1 to your
          platform_macros.GNU file. This resolves bugzilla 2840

Fri Aug 17 10:43:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_common.GNU:
          New common file for linux which contains settings which are the same
          for all compilers on linux

        * include/makeinclude/platform_linux.GNU:
        * include/makeinclude/platform_linux_icc.GNU: