@@ -1,3 +1,8 @@
+Fri Aug 17 18:28:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * m4/platform.m4:
+          Set ACE_UINT64_FORMAT_SPECIFIER for linux
+
 Fri Aug 17 14:41:15 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>
 
         * contrib/minizip/zip.c:
